Add Git Usage cleanup

--- a/git/04. GitHub Pages.md
+++ b/git/04. GitHub Pages.md
@@ -43,7 +43,24 @@
 
           - 제 username은 `nwith`
           - `nwith.github.io`
+2. `index.html`이 가장 최상단에 있는가?
 
-       2. `index.html`이 가장 최상단에 있는가?
 
-          
+
+---
+
+
+
+## GitHub Public Profile
+
+1. (github.com) New Repository
+
+2. (github.com) 본인의 username으로 된 Repository 생성
+
+   - 체크박스 `Add a README file` 체크!
+
+3. ```
+   github.com/{username}
+   ```
+
+   - https://github.com/nwith
