modify file name and edit Function.md

--- a/01. Python/02. Function.md
+++ b/01. Python/02. Function.md
@@ -377,3 +377,26 @@ my_ssum(10, 20)
 - 숫자, 문자열, 튜플은 **Immutablde**
 
 - 리스트, 딕셔너리는 **Mutable**
+
+
+
+전역변수에 대해서..
+
+```python
+# local variable vs global variable
+tmp = 100
+
+def my_func(x):
+    global tmp # 이것을 말안하면 local에서만 tmp를 찾음 -> 오류
+    tmp += x
+    return tmp
+
+print(my_func(100))
+print(tmp)
+# 하지만 유지보수가 떨어지기 때문에 global variable은 안 쓰는게 원칙!
+# local variable을 쓰자!
+-----------------------------------------------------------------------------
+200
+200
+```
+
