--- a/01. Python/03. Object.md
+++ b/01. Python/03. Object.md
@@ -2,3 +2,131 @@
 
 ## - Object
 
+
+
+절차적 프로그래밍, 구조적 프로그래밍, 함수지향적 프로그래밍으로 대표적인 언어가 C언어가 있다.
+
+이 방식을 얘기해보면 해결해야 하는 문제를 <u>기능단위</u>로 세분화 한다. 이 기능을 또 다시 세부기능, 그 세부기능에서 또 다시 세부기능으로 계속 쪼개다보면 언젠가 나눌 수 없을 때가 있을 것이고 그 기능을 함수형태로 구현하는 것이다.
+
+이 방식을 이용하면 직관적이기 때문에 분석하고 설계하기가 쉽다. 하지만 유지와 보수가 너무 힘들다. 따라서 이 프로그래밍 방식을 객체지향으로 바꾸게 된다. 객체지향으로 바꾸면서 유지보수성을 높여주는 대신 상대적으로 설계나 구현이 어려워졌다. 대표적인 언어로는 Java, C++, C#이 있다.
+
+현실세계의 문제를 그대로 프로그램으로 표현하고 프로그램을 기능으로 세분화 하지 않는다. 다만 프로그램을 구성하는 주체를 파악하여 이 주체들 간의 DATA흐름에 초점을 맞추게 된다.
+
+은행 프로그램을 예로 들어보면 이전에는 이체기능, 출금기능과 같이 기능에 초점을 맞췄다면 이제는 은행에 존재하는 '고객', '계좌', '창구', '은행원', '단말원', ... 등등 DATA가 흐르는 주체들을 요소로 만드는 것이다. 이렇게 되면 요소 자체를 가져다 쓰기 쉽게 된다.
+
+현실적인 구성 요소를 '개체(Object)'라고 하며 이를 구현하여 프로그래밍적으로 구성하고 있는 구성요소를 '객체(Object)'라고 한다.
+
+프로그램적으로 표현하기 위한 방법으로 Class를 사용한다.
+
+**Class에 대해**
+
+- 현실세계의 Object를 프로그래밍으로 모델링하는 수단
+- 첫글자는 대문자를 쓴다. (이로써 이름으로 function과 구분할 수 있으므로 따르자.)
+- 구성요소로 instance variable(변수)과 method(함수)가 있다.
+
+학생을 모델링 한다고 하면
+
+상태(학년, 학번, 재학/휴학상태, 학과, 학교, 이름, ...): instance variable
+
+행위(수업을 듣다, 수강신청을 하다, 공부하다, ...): method
+
+가 되는 것이다.
+
+
+
+class라는 것은 새로운 자료형을 만든 것이다. 만드는 목적은 다음과 같다.
+
+- 객체모델링의 수단
+- instance를 만들어내는 수단
+- ADT(Abstract Data Type)
+
+
+
+코드를 통해 확인해보자.
+
+```python
+class Student(object):
+    rate = 3.5 # property(class variable)
+    
+    # method(정해져있는 특별한 일을 하는 method)
+    def __init__(self, name, dept, num, grade):
+        # name, dept, num, grade는 local variable(지역변수)이고 stack에 임시저장
+        
+        # instance variable(self.name, self.dept, ...)
+        # 은 heap이라는 부분에 저장된다.
+        self.name = name # self.name : property(instance variable)
+        self.dept = dept
+        self.num = num
+        self.grade = grade
+    
+    def get_student_info(self):
+        print(self.name, self.dept)
+
+STU1 = Student('홍길동', 'CS', '990101', 4.0) # class를 기반으로 instance(object)를 생성
+STU2 = Student('박길동', 'EE', '990102', 4.3)
+STU1.name = '최길동'
+# 가능하지만 직접적인 제어를 하지 않는다.
+
+students = list()
+# 학생을 많이 저장할꺼라면 보기 좋은 코드
+students.append(Student('홍길동', 'CS', '990101', 4.0))
+# 이와같이 추가하여 사용 가능하다.
+
+print(type(STU1))
+a = 100
+print(type(a))
+-----------------------------------------------------------------------------<class '__main__.Student'>
+<class 'int'>
+```
+
+프로그래밍에서도 그렇고 가장 중요한것은 <u>데이터</u>이다. 때문에 `STU1.name = '최길동'`와 같은 직접적인 제어보다는 제어할 수 있도록 method를 거쳐서 만드는 것이 좋다. 직접 제어하면 원치 않는 오류가 발생할 수 있기도 하다.
+
+찍어보면 알겠지만 사실 숫자 100도 다 object이고 그외에도 수 많은 객체를 사용해왔다. 이미 다 class가 선언되어 있으며 이게 객체지향 언어의 특징이다. '진짜' 내장함수는 `print()`, `id()`와 같은 코드의 묶음이며 나머지는 다 클래스였다.
+
+
+
+예전에 Python은 하위 호환성이 없다는 얘기를 했었던 것 같다.
+
+즉 2.7버전과 3.7버전은 호환성이 없다. 여기서 이유를 밝히자면 3.x버전은 객체지향을 근간으로 프로그램언어를 다시 디자인했기 때문이다.
+
+참고로 python은 객체지향언어 이지만 추가적으로 함수프로그래밍도 가능하다. java는 전부 '다' 클래스이다. 진짜로 전부 '다'
+
+이쯤에서 내장함수도 하나 알아보자.
+
+`dir()` : 객체가 가지고 있는 Property와 method를 알려준다.
+
+위코드에서 밑의 코드를 추가하여 실행시켜보자.
+
+```python
+print(dir(STU1))
+------------------------------------------------------------------------------
+['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'dept', 'get_student_info', 'grade', 'name', 'num']
+```
+
+
+
+python은 객체지향적인 측면에서는 잘 맞지 않는 부분들도 가지고 있다.
+
+원래는 당연히 class안에 존재하는 property와 method만 이용할 수 있어야 한다. 하지만 다음을 보자
+
+```python
+STU1.address = '서울'
+# 객체지향관점에서 봤을때는 당연히 오류. 허용하면 안됨
+# 하지만 파이썬에서 프로그래밍의 유연성을 제공하기 위해 동적 property, method 허용한다.
+# 물론 문제가 생기는 책임은 본인이 져야 한다.
+print(STU1.address)
+
+# __init__ : 객체가 생성될 때 자동으로 호출되고 instance를 self라는 인자로 받아서
+#            일반적으로 property를 초기화 할때 사용된다.
+#            => 다른 언어(C++)에서의 생성자임
+#            python에서는 initializer라고 부른다.
+
+# class 내부에 property는 크게 instance variable과 class variable
+# method의 처음 인자가 self이면, instance method, 아니면 class method
+------------------------------------------------------------------------------
+서울
+```
+
+
+
+다음엔 Class에 대해 더 자세하게 진행해보자.
