--- a/01. Python/04. Class.md
+++ b/01. Python/04. Class.md
@@ -2,3 +2,304 @@
 
 ## - Class
 
+실습과 이론을 같이 진행하며 이해해보자.
+
+### 예제1
+
+```python
+class Car(object):
+    
+    software = 1.01 # class variable
+    
+    #initializer
+    def __init__(self, maker, cc, price):
+        self.maker = maker # property - instance variable
+        self.cc = cc
+        self.price = price
+        
+    #instance method
+    def print_car_info(self):
+        print(self.maker, self.cc, self.price)
+        print(self.software) # self --> car --> super
+        
+# class를 기반으로 heap 영역에 메모리 공간을 할당할 수 있다.
+# 이 확보된 메모리 공간 자체를 instance라고 한다. - 객체(object)
+
+car_1 = Car('BMW', 3000, 6000)
+car_2 = Car('KIA', 1500, 3000)
+# car_1 안에는 인스턴스의 메모리 시작주소가 들어가 있다.
+# 일반적으로 이런 변수들을 가리켜 reference variable이라 한다.
+# 하지만 프로그래밍 할때는 심플하게 car_1이 객체
+
+
+# 객체가 있다는 얘기는 class가 있다는 소리.
+# 모든 객체는 기본적으로 변수, 함수를 가지고 있다.
+car_1.print_car_info()
+
+# python의 객체지향 특징 중 하나는
+# instance에 새로운 property나 method를 동적으로 추가할 수 있다.
+car_1.color = 'red' #possible
+
+# 여기에서 발생할 수 있는 문제
+# Scope 문제가 있다.
+# 변수를 찾는 순서 => 인스턴스 namespace > 클래스 namespace > 슈퍼클래스 namespace
+
+car_1.software = 2.1
+# class variable을 수정하지 않는다.
+# 왜냐하면 변수를 찾다가 instance namespace에서 찾아봤는데 어라? 이 변수가 없네?
+# 하고 동적으로 생성해버린다. 클래스 namespace에는 분명히 있는데 말이다.
+car_2.print_car_info()
+------------------------------------------------------------------------------
+BMW 3000 6000
+1.01
+KIA 1500 3000
+1.01
+```
+
+
+
+---
+
+위의 스코프 문제를 아래와 같이 해결할 수 있다.
+
+### 예제2
+
+```python
+class Employee(object):
+    
+    raise_rate = 1.1 # class variable
+    
+    # initializeer 역할 (초기화의 역할)
+    def __init__(self, name, pay):
+        self.name = name
+        self.pay = pay
+    
+    # class로부터 만들어진 instance가 사라질때 
+    def __del__(self):
+        print('distructer 소멸자가 호출되었습니다.')
+    # business method(instance method)
+    def apply_raise(self):
+        self.pay = Employee.raise_rate * self.pay
+        
+    def get_user_info(self):
+        return "현재 {}의 연봉은 {}입니다.".format(self.name, self.pay)
+    
+    @classmethod # 클래스 메서드임을 알린다.
+    def change_raise_rate(cls, rate):
+        cls.raise_rate = rate
+        print('인상률이 {}으로 조정되었습니다.'.format(rate))
+	
+
+emp_1 = Employee('홍길동', 2000)
+emp_2 = Employee('강감찬', 3000)
+
+# 연봉 인상전
+print(emp_1.get_user_info())
+print(emp_2.get_user_info())
+
+# 연봉 인상후
+Employee.change_raise_rate(1.2)
+emp_1.apply_raise()
+
+print(emp_1.get_user_info())
+print(emp_2.get_user_info())
+
+emp_1.mobile = '010-4444-5555'
+# 이런거 강제로 못하게 하면 안되나요?
+# 왜냐하면 변수는 직접 조정하면 안좋기 때문
+# pri를 직접 억세스하지마라!
+------------------------------------------------------------------------------
+현재 홍길동의 연봉은 2000입니다.
+현재 강감찬의 연봉은 3000입니다.
+인상률이 1.2으로 조정되었습니다.
+현재 홍길동의 연봉은 2400.0입니다.
+현재 강감찬의 연봉은 3000입니다.
+```
+
+
+
+---
+
+### 상속
+
+객체지향의 꽃을 보통 상속(inheritance)이라고 한다.
+
+부모가 자식에게 유전자를 상속시켜주듯, class에서도 자신의 특성을 상속해서 또 다른 class를 확장시키는 기법이다.
+
+왜 필요할까?
+
+예를 들어 어떤 백화점에서 고객의 소비한 돈에 따라 계급을 붙여주는 시스템을 생각해보자.
+
+등급이 Bronze, Silver, Gold, Platinum, Diamond로 분류했다고 치자. 이 것을 프로그래밍적으로 구현한다고 하면 5개의 클래스를 만들텐데 Diamond가 받는 혜택은 Bronze가 누릴 수 있는 모든 혜택은 기본으로 가지고 더 많은 혜택을 가질 수 있을 것이다. 그럼 Bronze에서 구현한 내용을 또 다시 Diamond에서 써야하는 번거로움이 생긴다. 이런 것을 방지하기 위해 상속이 필요하다.
+
+상속을 주는 클래스를 '부모'클래스라 하며 parent class, super class, upper class라고도 한다.
+
+상속을 받는 클래스를 '자식'클래스라 하며 child class, sub class라고도 한다.
+
+실습을 통해 확인해보자.
+
+```python
+class Unit(object): # 최상위 클래스로 object!!! 이클래스를 상속받게되어있음
+    
+    def __init__(self, damage, life):
+        self.damage = damage
+        self.life = life
+        
+    def __del__(self): # 겸사겸사 특별한 함수들도 미리 맛보자.
+        print('소멸자가 호출되었어요!')
+        
+    def __str__(self):
+        #instance를 문자열로 변환시켜줄때 
+        return '소리없는 아우성'
+        
+
+class Tank(Unit): # inheritance, 이렇게 상속을 받는다.
+    
+    def __init__(self, damage, life, has_cannon):
+        super(Tank, self).__init__(damage,life)
+        self.has_cannon = has_cannon
+        # 탱크클래스의 슈퍼클래스를 찾아서~ => unit 
+        
+        
+tnk = Tank(1000, 500, True)
+print(tnk)  # tnk는 시작주소를 가지고 있다.
+print(dir(tnk))
+del tnk # 객체 소멸
+-----------------------------------------------------------------------------
+소리없는 아우성
+['__class__', '__del__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'damage', 'has_cannon', 'life']
+소멸자가 호출되었어요!
+```
+
+
+
+---
+
+### Magic Method
+
+특수한 기능이 있는 method들이 있다. 위에서 살짝 넣어놨는데 method 앞에 `__` 가 붙은 method를 지칭한다. 저번에 소개했던 `dir()`함수로 확인이 가능하다.
+
+실습을 통해 확인해보자.
+
+```python
+class Car(object):
+    def __init__(self, maker, cc):
+        self.maker = maker
+        self.cc = cc
+        
+    def __lt__(self,other): #less than, 클래스끼리 비교하기 위한 method
+        if self.cc < other.cc:
+            return True
+        else:
+            return False
+    
+car_1 = Car('KIA', 2000)
+car_2 = Car('HYUNDAI', 3000)
+
+# 어떤차가 배기량이 높은가?
+print(car_1 > car_2)
+# 내부적으로는 print(car_1.cc < car_2.cc) 라는 의미로 사용하고 싶다!
+-----------------------------------------------------------------------------
+False
+```
+
+
+
+---
+
+### First Class
+
+First-class citizen(일급시민)이라는 것에 대해 알아보자 먼저 First-Class이기 위해서는 3가지 특징을 만족해야한다.
+
+1. 변수에 저장될 수 있다.
+2. 함수의 인자로 전달될 수 있어야 한다.
+3. 함수의 결과로 리턴될 수 있어야 한다.
+
+지금까지 설명한 class로부터 파생된 instance는 다 만족하므로 1급 객체라 하며 function도 first class를 만족하여 파이썬의 함수는 1급 함수라 한다.
+
+각각 어떤것을 의미하는지 확인해보자.
+
+**1번**
+
+```python
+def my_add(x, y):
+    return x + y
+print(my_add)
+f = my_add
+# 객체 문자열로 변환하면 이렇게 나오더라, my add는 변수 실제 실행되는 코드의
+# 시작주소가 들어있다. 괄호는 해당 위치 찾아가서 실행해!!!
+print(my_add(1,2))
+print(f(100,200))
+print(f)
+------------------------------------------------------------------------------
+<function my_add at 0x00000213B53D9E58>
+3
+300
+```
+
+**2번**
+
+```python
+def my_mul(x, y):
+    return x * y
+
+def my_operation(func, x, y):
+    result = func(x,y)
+    return result
+
+print(my_operation(my_mul,10,20))
+print(my_operation(my_add,10,20))
+------------------------------------------------------------------------------
+<function my_add at 0x00000213B53D9E58>
+200
+30
+```
+
+**3번**
+
+```python
+def addMaker(x): # x는 지역변수(local variable)
+    
+    def my_add_maker(y):
+        return x + y
+    
+    return my_add_maker
+
+add_5 = addMaker(5) 
+add_10 = addMaker(10)
+print(add_5(1))
+print(add_10(5))
+------------------------------------------------------------------------------
+6
+15
+```
+
+혹시 3번에서 이상한 점을 발견했을지 모르겠다. 발견하면 정말 대단한 눈썰미를 가진것이겠지만 못찾아도 이해할 수 있다.
+
+사실 결과가 6이랑 15가 나온다는 것이 이상한 것이다. 왜냐하면 x는 지역변수이고 5를 통해 x에 넣었다고 하자. 하지만 `return my_add_maker`하는 순간 x라는 지역변수는 소멸되므로 값이 날아갔을 것이고 `add_5(1)` 한들 6이 될 수 없어야 하는 것이다.
+
+이게 일급함수의 특징중 하나인데 원래 안되는게 맞다. 하지만 된다. 된다는 것은 지역변수가 메모리를 계속 점유하고 있다는 것이고 이게 Closure라는 현상이다.
+
+아하 그렇구나!
+
+근데 의문점이 생긴다. 이걸 진짜 도대체 어따써먹지????????
+
+눈에 보일만한 예제가 없다. 말로설명하면
+
+외부에서 선언된게 안에서 리턴되는 함수의 내부에 사용되었을 때.. 말부터 어렵다 나중에 JQuery에서 나오게 된다면 알려주겠다.
+
+
+
+다음은 Module에 대해 얘기할텐데 상식만 잠깐 알고가자.
+
+database관련 프로그램, 채팅프로그램과 같은 network프로그램은 라이브러리(class, function)을 이용한다. 특정 기능만 단위로 만들어 놨기 때문에 logic이라는 것은 내가 짜야한다.
+
+Framework는 라이브러리 + 동작매커니즘까지 같이 들어가 있는것을 말한다. Framework 안드로이드를 이해한다면 거기에 내가 뭘 끼워넣을지 생각해서 만들고 로직은 이미 정해져있기 때문에 훨씬 쉽다. 요새는 거의다 Framework단위로 만들어져있다.
+
+훗날에 할 머신러닝과 딥러닝은 Framework가 완성되어있지 않다. 규칙이 없어서 찾고 만드는 중이며, 알고리즘과 라이브러리는 있지만 Framework가 없다. 역사가 짧아서 그렇기도 하다.
+
+파이썬은 우리에게 Module이라는 것을 제공하는데 라이브러리개념이랑 같다.
+
+database module, network module을 제공한다.
+
+Module이란 함수나 변수 class들을 모아놓은 파일을 지칭하며 하나의 파이썬 프로그램에서 불러다가 사용할 수 있는 python파일이다. 당연히 코드의 재사용성이 매우 좋아지므로 사용한다.
