--- a/03. Server/00. Introduction.md
+++ b/03. Server/00. Introduction.md
@@ -1,6 +1,6 @@
 # 머신러닝, 딥러닝을 위한 Server
 
-## - Ajax
+## - Instruction
 
 서버의 얘기를 주로 하기위해 서버라는 별도의 카테고리를 만들었지만 아직은 JQuery에 더 가깝기는 하다. 그래서 JQuery실습을 더 할것이다.
 
@@ -18,8 +18,11 @@ Web Client(Web browser)
 
   - 참고: Requset방식은 목적에 따라 4개로 나뉜다.
 
-    - Get, Post, Put, Delete
-
+    - Get: 서버의 데이터 요청
+    - Post: 서버의 데이터 생성
+    - Put: 서버의 데이터 수정
+    - Delete: 서버의 데이터 삭제
+    
     하지만 특정 목적이 없다면 Get, Post를 쓴다.
 
 **Server Side**
@@ -42,11 +45,7 @@ Web Server 프로그램이 request를 받는다. 이 프로그램이 project들,
 
 그럼 Dinamic program은 어떻게 할까? WAS(Web Application Sever)라는 Web Application을 실행시켜주는 서버를 별도로 프로그램을 만들어 관리하게 된다. 
 
-
-
 정리해보면 Requset는 무조건 Web Server가 받는다. 여기서 static이라면 바로 response를 해주고, 만약 Requset 내용중 웹 어플리케이션을 실행시켜서 결과를 알려달라! 라는 요청이 있다면 Web Server는 이 것을 하지못한다. 그래서 Web Server가 WAS에게 그 Request내용을 그대로 전달한다. WAS는 Database(MySQL같은 것)를 통해 데이터를 주고 받아 데이터 처리를 한 후 다시 Web Server에 전달하게 된다.
-
-
 
 네트워크 사용량은 단점이지만 모든 처리가 서버쪽에서 일어난다. 그래서 프로그램만들기가 그렇게 어렵지 않다. 
 
@@ -54,9 +53,11 @@ Web Server 프로그램이 request를 받는다. 이 프로그램이 project들,
 
 ### 개선된 모델
 
+![Structure](.\jpgfile\Structure.PNG)
+
 Ajax기반의 single page application model
 
-Client에서 request를 Web server를 보내면 HTML, CSS, Javascript로 구성된 <u>웹페이지가 아닌 웹프로그램</u>(front-end Web application)을 보내준다. 그래서 Client에서 <u>프로그램</u>이 실행된다. 그레서 크롬에서 프로그램을 실행하는 것처럼 된다.
+Client에서 request를 Web server를 보내면 HTML, CSS, Javascript로 구성된 <u>웹페이지가 아닌 웹프로그램</u>(front-end Web application)을 보내준다. 그래서 Client에서 <u>프로그램</u>이 실행된다. 그래서 크롬에서 프로그램을 실행하는 것처럼 된다.
 
 이 프로그램이 실행되는 와중에 데이터가 없으면 서버에 데이터를 보내달라고 Request를 보낸다. 이 request는 html, css를 요청하는게 아니므로 WAS로 넘어가고 WAS에서 프로그램(Back-end Web application)이 DB를 통해 DATA를 돌려주게 된다.
 
@@ -69,3 +70,102 @@ data만 주고받는 통신방식이 바로 **Ajax**(순수 javascript 통신방
 front-end web applicaion은 역사가 짧아서 잘하는 사람이 별로 없고 어렵다. 이것을 직접 만들기에는 무리가 있어서 패스한다. 
 
 back-end web application도 필요하므로 Open API를 이용할 것이다.
+
+
+
+---
+
+### Request
+
+Request에는 URL이 들어 있다. WAS에서 어떤 프로그램을 실행시켜야하는지 WAS의 프로그램 <u>이름</u>과 프로그램에 어떤 DATA를 넣어서 실행해야 할지, 그 DATA가 있다.
+
+**GET방식:** DATA전달시 URL에 DATA을 포함시켜서 전달한다. (Simple), 참고로 URL은 길이 제한이 있다. 따라서 서버프로그램에 많은 양의 DATA를 보낼 수 없다. 주소창에 바로 보이므로 암호화 복호화를 하긴 하지만 보안성이 꽝이다.
+
+?와 key, value쌍으로 보낸다. 여러개 보내야하면 &를 이용한다. 예를 들면 `?a=100&b=20&c=30`이런식으로 작성되며, 이를 쿼리스트링이라 한다. 예를 들어 네이버에 들어가서 login을 눌러보자.
+
+http://nid.naver.com/nidlogin.login?mode=form&url=http%3A%2F%2Fwww.naver.com
+
+앞에는 프로토콜과 도메인 주소, `nidlogin.login`은 서버쪽 프로그램 이름 그 다음엔 mode에는 form이란 값, url은 그 뒤에 주소값으로 전달해달라고 명시한 GET방식이다.
+
+**POST방식:** DATA전달시 Request header에 포함시켜 전달한다. 브라우저가 알아서 만들어서 보이지 않고 우리가 신경쓰지 않는다. 길이제한이 없어 많은양의 DATA를 전달할 수 있다. Header에 있기 때문에 일반사용자는 보기 힘들다. 패킷을 까면 볼 수 있어서 이 역시 암호화 하지만 보안성이 <u>그나마</u> 낫다.
+
+**Requset를 보내는 방법**
+
+1. browser 주소창에 URL을 입력 (GET)
+2. `<a>` tag를 이용해 hyperlink를 생성할 수 있는데 이 link를 클릭하여 request (GET)
+3. `<form action="" method="POST">`: method값에 따라 GET, POST방식으로 호출 가능
+
+
+
+### Response
+
+**Round Trip**: HTML, CSS, Javascript를 다 전달
+
+**SPA**: Javascript를 이용한 request, 이미 HTML, CSS, Javascript다 있기 때문에 DATA만 받음. 이 DATA는 Back-end Web application의 결과로 return하는 것이며 이는 <u>특정 형식</u>을 가지고 있다.
+
+**DATA양식**
+
+- CSV(Comma Seperated Value)
+  - 예시) 홍길동, 20, 서울, 김길동, 30, 제주, ..
+  - Simple하고 부가적인 데이터가 적다. ,는 기본적으로 있는 기호 그 자체이고, program에서 이를 나누기 위해 특별한 데이터를 소모할 필요가 없다. 따라서 다른 방식 대비 전체 데이터 사이즈가 작다.
+  - 대용량의 데이터 처리에 적합하다.
+  - 데이터의 구조(포함, 상하관계 등..)를 표현하기가 힘들다.
+  - 유지, 보수가 힘들다.
+- XML(Extended Markup Language)
+  - 태그언어. 다만 문법을 정확히 맞춰야 하며, 사용자 정의 태그를 만들 수 있다.
+  - 예시) `<name>홍길동</name><age>20</age><address>서울</address>`
+  - 데이터의 구조 잘표현, 유지보수가 잘된다, 데이터를 직관적으로 표현
+  - redundant한 데이터가 너무 크다. CSV는 ,밖에 없었지만 지금은 부가적인 데이터가 더크다.
+  - 데이터 크기가 커졌다. 
+- JSON(Javascript Object Notation)
+  - javascript표현법<u>만</u> 따온거지, javascript와 전혀 상관없다.
+  - {name: 홍길동, age:20, address:서울}
+  - XML의 장점을 계승하여 사용도 편하고 key, value로 찾기도 쉬움. 사이즈도 적당히 줄였음.
+  - 요즘 만들어지는 프로그램의 데이터는 보통 JSON으로 많이 한다.
+
+
+
+---
+
+### Open API를 이용해보자
+
+[OPEN API](https://www.kobis.or.kr/kobisopenapi/homepg/main/main.do)로 들어가서 일별 박스오피스로 들어가보자.
+
+![](.\jpgfile\OPEN_API.PNG)
+
+**REST방식(GET, POST, PUT,DELETE)** 또는 SOAP방식으로 선택 호출 가능하다라고 한다. 응답 형식은 XML와 JSON을 지원한다라고 써있다.
+
+- 기본 요청 URL: REST방식의 URL은 서버쪽 프로그램을 호출하기 위해서 어떤 URL을 써야하는지 알려주는 것이다.
+- 요청 parameter: 전달하는 방식을 얘기한다. GET방식이라고 써있으니 쿼리스트링을 이용해서 전달해야 한다.
+
+![](.\jpgfile\OPEN_API2.PNG)
+
+쿼리스트링 정보는 위와 같으며 필수인 2가지는 반드시 넣어줘야 한다.  서버쪽 프로그램을 호출하기 위한 URL을 써보자.
+
+`http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?key={여러분의 키값}&targetDt={조회하고자 하는 날짜}`로 쓸 수 있다. 우리의 키값은 회원가입해야 얻을 수 있다. 회원가입해보자.
+
+회원가입 후 키 발급/관리로 가서 발급을 받으면 개인의 키값을 받을 수 있다. 만든 URL에 키와 날짜를 메꾸면 URL이 완성이다. 그리고 브라우저에 치면 날짜는 21년 7월 15일로 하였다.
+
+![](.\jpgfile\OPEN_API3.PNG)
+
+위와 같은 화면을 얻을 수 있다.
+
+보기힘드므로 크롬의 확장프로그램을 다운받아보자.
+
+[크롬웹스토어](https://chrome.google.com/webstore/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa?hl=ko&)에서 받을 수 있다. JSON Formatter를 크롬에서 추가하자. 위 url을 새로고침하거나 다시 입력하면 날것의 자료를 파싱하여 다음과 같이 보기 좋게 바꿔준다.
+
+![](.\jpgfile\OPEN_API4.PNG)
+
+이것을 살짝 접어서 보면
+
+![](.\jpgfile\OPEN_API5.PNG)
+
+JSON안에 JSON(key, value쌍)이 또 있고 그안에 배열이 있고 또 그 안에 JSON구조로 되어 있다. 이렇게 중첩되어서 보여준다.
+
+key값이 의미하는 것은 우리가 때려맞출수 있겠지만, key만보고 모를 수도 있다 이는 reference에 다 붙여져 있으며 여기서는 영화진흥위원회 사이트가서 보면 다음과 같이 보여준다.
+
+![](.\jpgfile\OPEN_API7.PNG)
+
+
+
+다음엔 이를 가지고 실습을 해보자.
