edit file, add jpg file

--- a/04. Back-End/04. Template.md
+++ b/04. Back-End/04. Template.md
@@ -167,7 +167,7 @@ def detail(request, question_id):
     return render(request, 'polls/detail.html', context)
 ```
 
-`get_object_or_404`를 import했다. 이 구문은 object를 가져오는데 성공하면 진행하지만 실패하면 404오류를 뜨게하는 키워드이다. 참고로 어떤 함수든 시작은 request를 받는게 기본이며, question_id는 지금 이 detail 페이지는
+`get_object_or_404`를 import했다. 이 구문은 object를 가져오는데 성공하면 진행하지만 실패하	 면 404오류를 뜨게하는 키워드이다. 참고로 어떤 함수든 시작은 request를 받는게 기본이며, question_id는 지금 이 detail 페이지는
 
 ![page](.\jpgfile\votepage.PNG)
 
@@ -338,7 +338,7 @@ vote를 눌렀을 때 발생하는 함수인데, 2가지 경우가 있다.
 
 submit을 누르면 내가 선택한 radio버튼의 name과 value가 key와 value의 쌍으로 넘어간다고 했다.
 
-request에서 넘어왔을거다. post방식으로,
+post방식으로 request에서 넘어왔을거다. 근데 내가 투표를 하지 않으면
 
 request값이 없는거다. 그래서 get해서 땡긴건데 없으면 에러가 발생! 그래서 예외가 발생하면 detail페이지를 다시 render할 것이다. render는 무조건 request,  html, context가 넘어갔었다. 따라서 render하는 것인데, context를 굳이 안만들고, context가 dictionary형태이므로 dictionary자체를 인자로 넣을 것이다. 코드를 작성하면, detail.html을 호출할 때 기본적으로 question넘겨야 하니 여기도 넘겨야함
 
@@ -394,7 +394,7 @@ def vote(request, question_id):
         return HttpResponseRedirect(reverse('polls:results', args=(question_id,))
 '''
 장고가 제공해주는 redirect시키는 함수와, reverse 이를 사용하기 위해 맨위에 각각 import해야한다.
-url을 표현하기 위해 직접 쓰는 방법과 namespace를 이용하는 방법 2개가 있었다.ㄴ
+url을 표현하기 위해 직접 쓰는 방법과 namespace를 이용하는 방법 2개가 있었다.
 저번에 했던 namespace방법은 template방식이고 여기서는 다르게 한다.
 프로그램적으로 가져오는것은 장고가 제공해주는 reverse
 참고로 유지보수가 힘들어서 url을 직접쓰는 것은 비추!!
