--- a/04. Back-End/03. URL.md
+++ b/04. Back-End/03. URL.md
@@ -51,14 +51,14 @@ from polls import models
 def index(request):
 # request를 받은 다음 바로 실행되므로 request에 대한 정보를 인자로 받아야 함.
 # 이 request안에는 쿼리스트링에 대한 정보도 포함되어 있을 수 있음.
-	Queston.objects.all().order_by('pub_date')
+	q_list = models.Queston.objects.all().order_by('-pub_date')
 	context = {'question_list': q_list}
 	return render(request, 'polls/index.html', context)
 ```
 
 인덱스가 하는 일을 다시 생각해보자. 외부에서 Request를 받아서 처음 할 일은 DB안에 있는 Question Table속의 질문에 대한 목록을 가져와서 이 목록을 가지고 결과 HTML을 띄우기 위해 Template을 이용하여 만든 후 Response를 보내는 것이다.
 
-그래서 처음 코드가 `Question.objects.all().order_by('pub_date')`이며 분석해보자.
+그래서 처음 코드가 `Question.objects.all().order_by('-pub_date')`이며 분석해보자.
 
 ORM을 사용하기 때문에 DB의 데이터를 가져오는데 SQL을 사용하지 않을 것이며 
 class는 table을 지칭, instance는 record를 지칭했었다. 따라서 질문의 목록정보들을 싹다 가져오기 위해 `objects` 키워드를 이용했다.
