--- a/00. Git/01. Git.md
+++ b/00. Git/01. Git.md
@@ -12,7 +12,7 @@
 
 - `git add`: git으로 관리할 파일들을 Staging Area로 올린다.
 
-  - Staging Area: commit으르 남길 파일 및 폴더를 준비하는곳.
+  - Staging Area: commit을 남길 파일 및 폴더를 준비하는곳.
   - `git add A.txt`: `A.txt` 파일을 Index (Staging Area)에 등록 (폴더 단위도 가능)
   - `git add .`: 현재 폴더(`.`)를 Index에 등록. 폴더를 등록하면 내부의 모든 파일이 등록됨.
 
@@ -33,4 +33,4 @@
   git config --global user.name '이름'
   ```
 
-  - `git config --global --list`: 현재 git 프로그램에 설정된 값들을 확인
+  - `git config --global --list`: 현재 git 프로그램에 설정된 값들을 확인g
