--- a/05. ML, DL/01. Pandas.md
+++ b/05. ML, DL/01. Pandas.md
@@ -282,7 +282,7 @@ display(df)
 
 ```python
 df = pd.read_csv('./data/student.csv', sep=',')
-with open('./data/csv_to_json.json', 'w', encoding='utf8') as f:
+with open('./data/csv_to_json1.json', 'w', encoding='utf8') as f:
 # 파일명을 csv_to_json으로 임의로 잡은것임, 파일이 없기 때문에 open하면 만든다.
 # 'w'는 write의 약자. 'r'을 쓰면 read의 약자.
 # 엘리아싱하여 f라는 이름을 준다.
@@ -290,9 +290,35 @@ with open('./data/csv_to_json.json', 'w', encoding='utf8') as f:
 # orient는 방향, default는 column이긴 하다.
 # json데이터가 생성되고 column명이 json의 key값이 된다.
 # 실행시키고 확인해보자.
+
+with open('./data/csv_to_json2.json', 'w', encoding='utf8') as f:
+	df.to_json(f, force_ascii=False, orient='records')
+# 다른 방향으로 만들 수도 있다. 표현하는 방식이 다르게 되며 둘다 해보고 내가 쓰기 좋은
+# 형태로 바꾸면 된다.
+
+with open('./data/csv_to_json3.json', 'w', encoding='utf8') as f:
+	df.to_json(f, force_ascii=False, orient='index')
+# 잘 안쓰지만 index를 방향으로 잡는 방법도 있다.
+
+with open('./data/csv_to_json4.json', 'w', encoding='utf8') as f:
+	df.to_json(f, force_ascii=False, orient='values')
 ```
 
+실행시키면 1줄로 나열되어있어 보기 힘들다. 이런건 구글에 json formatter를 검색하여 별도의 파일로 다운로드하지 않아도 브라우저에서 처리하여 보기 좋게 바꿀 수 있다.
 
+
+
+그럼 JSON을 DataFrame으로 바꿀 수 있나요?
+
+```python
+import numpy as np
+import pandas as pd
+with open('./data/student_json_column.json', 'r', encoding='utf-8') as f:
+    data_dict = json.load(f)
+# 딕셔너러처럼 생김   
+df = pd.DataFrame.from_dict(data_dict, orient='columns')
+# 딕셔너리로부터 DataFrame을 만듦
+```
 
 
 
