add Regression and Sklearn

--- a/05. ML, DL/07. AI Introduction.md
+++ b/05. ML, DL/07. AI Introduction.md
@@ -124,6 +124,7 @@ def numerical_differentiation(f, x):
     delta_x = 1e-4
     result = (f(x + delta_x) - f(x - delta_x)) / (2 * delta_x)
     # 중앙 차분을 이용한 수치미분 = 근사치를 계산
+    # 중앙 차분이 근삿값구하는 것중에는 가장 정확하다.
     return result
 
 def my_func(x):
@@ -137,3 +138,77 @@ numerical_differentiation(my_func, 5)
 미분의 정의를 살펴보면 lim가 있는데 이는 코드로 구현할 수 가 없다. x가 0으로 무한히 간다는 것을 코드로 구현할 수 없으므로 적당하게 작은 값을 쓴다. 따라서 1e-4를 이용하였다. 
 
 참고로 파이썬의 경우 1e-8이하로 떨어지면 floating point 오류가 발생한다. 따라서 결과는 정확하고 싶지만 연산에서 오류가 뜰수 있으므로, 쓰지 않는다. 그럼 1e-6은 왜 쓰지 않을까? 써도는 되지만 사람들의 경험상 최적의 값은 1e-4여서 이값을 가져다 쓴다.
+
+
+
+다변수 함수의 수치미분 코드도 한번 작성해보자.
+
+f(x, y) = 2x + 3xy + y^3
+
+와 같은 함수가 있다고 해보자. 입력변수가 2개이기 때문에 수치미분을 2번해야 한다.
+
+f'(1.0, 2.0) => (8.0 ,15.0)
+
+```python
+import numpy as np
+
+# 수치미분을 수행할 함수, 범용적으로 만들어서 수정할 필요가 없다.
+def numerical_derivative(f, x):
+    # f: 미분을 하려고하는 함수
+    # x: 모든 독립변수의 값을 포함하고 있는 ndarray
+    delta_x = 1e-4
+    derivative_x = np.zeros_like(x)
+    
+    it = np.nditer(x, flags=['multi_index'])
+    
+    while not it.finished:
+        idx = it.multi_index
+        tmp = x[idx]
+        x[idx] = tmp + delta_x
+        fx_plus_deltax = f(x)
+        
+        x[idx] = tmp - delta_x
+        fx_minus_deltax = f(x)
+        
+        derivative_x[idx] = (fx_plus_deltax - fx_minus_deltax) / (2 * delta_x)
+        x[idx] = tmp
+        
+        it.iternext()
+        
+    return derivative_x
+    
+
+# 미분할 함수, 미분할 함수는 다시 만들어야 한다.
+# 모든 독립변수가 포함된 인자를 받아서 내부에서 분할해 처리해야 한다.
+def my_func(input_value): # [1.0, 2.0]
+    x = input_value[0]
+    y = input_value[1]
+    return 2*x + 3*x*y + y*y*y # np.power(y,3)
+
+result = numerical_derivative(my_func, np.array([1.0, 2.0]))
+print(result)
+------------------------------------------------------------------------------
+[ 8.         15.00000001]
+```
+
+f(a, b, c, d) = 2ab + 6a^2bc + 5cd + 2bd^2
+
+함수도 마찬가지로 구해보자. 수치미분을 이용할 함수는 그냥 쓰면 된다.
+
+```python
+def my_func2(input_value):
+    a = input_value[0,0]
+    b = input_value[0,1]
+    c = input_value[1,0]
+    d = input_value[1,1]
+    return 2*a*b + 6*a*a*b*c + 5*c*d + 2*b*d*d
+
+result = numerical_derivative(my_func2, np.array([[1.0, 2.0],
+                                                [3.0, 4.0]]))
+print(result)
+------------------------------------------------------------------------------
+[[76. 52.]
+ [32. 47.]]
+```
+
+프로그래밍할 때 당분간은 수치미분을 구현한 함수를 사용할 것이다.
