add Evaluation, kaggle

--- a/05. ML, DL/12. LogisticRegression.md
+++ b/05. ML, DL/12. LogisticRegression.md
@@ -97,3 +97,284 @@ plt.show()
 ![구분](./jpgfile/구분그래프.png)
 
 Linear Regression으로 구분하는 데이터를 만들 수가 있다. 이러한 직선을 통해 위 아래로 나누고 위는 1, 아래는 0으로 값을 매기는 것으로 분류를 할 수 있다. 선과 가까울수록 0.5 선과 멀어질수록 0.7~9와 같이 확률도 제공한다.
+
+
+
+분류문제를 Linear Regression으로 해결할 수 있을까? 간단한 실습을 확인해보자
+
+```python
+import numpy as np
+from sklearn import linear_model
+import matplotlib.pyplot as plt
+
+# Training Data Set
+x_data = np.array([1,2,5,8,10,30]).reshape(-1,1)
+# 공부시간에 따른
+t_data = np.array([0,0,0,1,1,1]).reshape(-1,1)
+# 시험 합격 여부
+
+# Model 생성
+model = linear_model.LinearRegression()
+
+# Model 학습
+model.fit(x_data, t_data)
+
+print('W: {}, b: {}'.format(model.coef_, model.intercept_))
+print(model.predict([[8]]))
+
+plt.scatter(x_data.ravel(), t_data.ravel())
+plt.plot(x_data.ravel(),
+         x_data.ravel() * model.coef_.ravel() + model.intercept_,
+         color = 'r')
+------------------------------------------------------------------------------
+W: [[0.03500583]], b: [0.17327888]
+[[0.45332555]]
+```
+
+![그래프](./jpgfile/이상데이터.png)
+
+데이터가 좀 튀는 데이터가 있는 순간, 안맞아 떨어진다. 8시간도 합격으로 데이터를 입력했지만,  확인해보면 0.45로 불합격쪽에 속한다. 심지어 30은 이상치도 아니다. 이상치란 존재하기 힘든 값이지만 실제로 30시간을 공부한사람이 있을 수 있으므로 제대로 입력한 값이 맞다.
+
+그래서 LinearRegression으로는 해결하기가 힘들다.
+
+따라서 Logistic으로 해야하며, 시그모이드부터 해보자. 그렇다면 모델은 어떻게 될까?
+
+로지스틱 회귀모델은 linear의 응용버전으로 그  linear의 결과모델에 시그모이드함수만 취하면 된다. 시그모이드 함수가 f(x)라 하면, y = f(wx+b)가 되는 것이다.
+
+파이썬구현으로 한번 확인해보자
+
+```python
+# 공부시간에 따른 합격여부
+
+# python 구현
+
+import numpy as np
+import tensorflow as tf
+from sklearn import linear_model
+
+## 수치미분함수
+def numerical_derivative(f, x):
+    
+    delta_x = 1e-4
+    derivative_x = np.zeros_like(x)  
+    
+    it = np.nditer(x, flags=['multi_index'])
+    
+    while not it.finished:
+        
+        idx = it.multi_index
+        
+        tmp = x[idx]    
+                
+        x[idx] = tmp + delta_x   
+        fx_plus_deltax = f(x)
+        
+        x[idx] = tmp - delta_x   
+        fx_minus_deltax = f(x)
+        
+        derivative_x[idx] = (fx_plus_deltax - fx_minus_deltax) / (2 * delta_x)
+        
+        x[idx] = tmp     
+        
+        it.iternext()
+
+    return derivative_x
+
+# Training Data Set
+x_data = np.arange(2,21,2).reshape(-1,1)   # 공부시간
+t_data = np.array([0,0,0,0,0,0,1,1,1,1]).reshape(-1,1)
+# 12시간은 불합격, 14시간은 합격, 13시간??
+
+# Weight & bias
+W = np.random.rand(1,1)
+b = np.random.rand(1)
+
+# predict
+def logistic_predict(x):
+    
+    z = np.dot(x,W) + b    # linear regression
+    y = 1 / ( 1 + np.exp(-1 * z) )  # sigmoid 적용, y가 우리의 model
+    
+    result = 0
+    
+    if y < 0.5:
+        result = 0
+    else:
+        result = 1
+    
+    return result, y
+
+# loss function
+def loss_func(input_value):   # [W의값 ,b의값]  1차원 ndarray로 입력인자를 사용
+    
+    input_w = input_value[0].reshape(-1,1)
+    input_b = input_value[1]
+    
+    z = np.dot(x_data,input_w) + input_b
+    y = 1 / ( 1 + np.exp(-1 * z) )
+    
+    delta = 1e-7
+    
+    return -np.sum(t_data*np.log(y+delta) + (1-t_data)*np.log(1-y+delta))
+
+# learning rate 설정
+learning_rate = 1e-4
+
+# 반복학습
+for step in range(300000):
+    
+    input_param = np.concatenate((W.ravel(), b.ravel()), axis=0)
+    # [W의값 ,b의값]
+    result_derivative = learning_rate * numerical_derivative(loss_func, input_param)
+    
+    W = W - result_derivative[0].reshape(-1,1)
+    b = b - result_derivative[1]
+    
+    if step % 30000 == 0:
+        print('loss : {}'.format(loss_func(input_param)))
+------------------------------------------------------------------------------
+loss : 34.552432864100254
+loss : 2.979362410904073
+loss : 2.1525428201108205
+loss : 1.7919188055660753
+loss : 1.5786253235347296
+loss : 1.4331004732445696
+loss : 1.3252492234724311
+loss : 1.2408949371929379
+loss : 1.1723763693612324
+loss : 1.1151425394009837
+```
+
+예측도 해보자
+
+```python
+# prediction
+result = logistic_predict([[13]])
+print(result)
+------------------------------------------------------------------------------
+(1, array([[0.54447942]]))
+```
+
+붙었고, 확률까지 본다면 0.544의 확률로 붙는다.
+
+
+
+sklearn으로 구현한 것과 비교해보자.
+
+```python
+model = linear_model.LogisticRegression()
+model.fit(x_data, t_data.ravel())
+# t데이터는 1차원으로 입력한다
+result = model.predict([[13]])
+proba_result = model.predict_proba([[13]])
+print(result)
+print(proba_result)
+------------------------------------------------------------------------------
+[0]
+[[0.50009391 0.49990609]]
+```
+
+0.50009391로 떨어지고 0.4999069로 붙어서 결과는 떨어진다고 예측하고 있다.
+
+
+
+tensorflow도 해보자.
+
+```python
+import numpy as np
+import tensorflow as tf
+x_data = np.arange(2,21,2).reshape(-1,1)   # 공부시간
+t_data = np.array([0,0,0,0,0,0,1,1,1,1]).reshape(-1,1)
+
+X = tf.placeholder(shape=[None,1], dtype=tf.float32)
+T = tf.placeholder(shape=[None,1], dtype=tf.float32)
+
+W = tf.Variable(tf.random.normal([1,1]), name='weight')
+b = tf.Variable(tf.random.normal([1]), name='bias')
+
+# hypothesis
+logit = tf.matmul(X,W) + b # linear
+H = tf.sigmoid(logit) # logistic
+
+# loss function
+loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=logit,
+                                                             labels=T))
+# 예측값과 진짜값의 차이가 loss라고 생각하면 인자값이 이해가 된다.
+
+# train node
+train = tf.train.GradientDescentOptimizer(learning_rate=1e-4).minimize(loss)
+
+# session & 초기화
+sess = tf.Session()
+sess.run(tf.global_variables_initializer())
+
+# 반복학습
+for step in range(300000):
+    tmp,loss_val = sess.run([train,loss], feed_dict={X:x_data, T:t_data})
+    if step % 30000 == 0:
+        print('loss값: {}'.format(loss_val))
+------------------------------------------------------------------------------
+loss값: 1.3627349138259888
+loss값: 0.4498034417629242
+loss값: 0.4094923138618469
+loss값: 0.3776502013206482
+loss값: 0.35191377997398376
+loss값: 0.3306705355644226
+loss값: 0.3128618001937866
+loss값: 0.2976542115211487
+loss값: 0.28453555703163147
+loss값: 0.27308279275894165
+```
+
+예측까지 해보자
+
+```python
+result = sess.run(H, feed_dict={x:[[13]]})
+print(result) # 얘는합격
+------------------------------------------------------------------------------
+[[0.5767388]]
+```
+
+결과가 다 조금 씩 다르다.
+
+어느게 맞을까? 라고 하면 사실 크게 의미 없다. 지금 데이터가 10개밖에 없어서 아무리 좋은 사이킷런이라도 예측하는게 별 의미 없는 것이다. 다만 어떻게 구현할 수 있는지와 데이터가 많아지면 더학습을 잘할테니 그렇게알고 넘어가자.
+
+
+
+---
+
+### 실습
+
+미국대학원의 합격률데이터 admission이다. 이 파일로 한번 실습해보자.
+
+prediction은 [600 3.8 1]인사람이 합격할까?
+
+
+
+1. python구현
+
+```python
+
+```
+
+2. sklearn 구현
+
+```python
+
+```
+
+2. tensorflow구현
+
+```python
+
+```
+
+
+
+대충 이정도나오면 맞다
+
+---
+
+
+
+근데 평상시에 내가 이걸 검증할 수 있는 방법이 있을까? 성능이 어느정도일까? 이런 판단을 어떻게해야할까 다행히 로지스틱회귀는 성능을 평가하는 지표(Metric)가 있다.
