--- a/06. DL/03. Numerical Differentiation.md
+++ b/06. DL/03. Numerical Differentiation.md
@@ -1,12 +1,14 @@
-# 밑바닥부터 시작하는 딥러닝 3
+# 제 1고지 - 미분 자동 계산
 
-### 제 1고지 - 미분 자동 계산
+### - 수치 미분
+
+
 
 미분을 자동으로 계산하기 위해 앞서 Variable과 Function 클래스를 구현했었다. 이제 미분이 무엇인지와 수치 미분이라는 간단한 방법으로 미분을 계산해보겠다.
 
 **Step 4. 수치 미분**
 
-4.1 미분이란?
+미분이란?
 
 미분이란 '변화율'이라고 한다. 변화율은 중요한 정보이다. 예를 들어 달리기를 하는데 나는 100m를 달렸고 친구는 200m를 달렸다고 해보자. 누가 더 빠를까? 당연히 알 수 없다. 나는 10초만에 달린반면, 친구는 30초가 걸렸다면, 내가 더 빠르게 달렸다고 할 수 있다. 이렇듯 변화율은 기준이 있고 그 기준대비 얼만큼 증가 혹은 감소했냐를 알려준다.
 
@@ -20,7 +22,7 @@ $f'(x) = lim_{h \to 0} \frac{f(x+h)-f(x)}{h}$
 
 
 
-4.2 수치 미분 구현
+수치 미분 구현
 
 미분을 정의한 식을 계산하는 코드를 구현해보자. 하지만 컴퓨터는 극한을 취급할 수 없으니 극한과 비슷한 값으로 대체하도록 한다. 예를 들면 h = 0.0001 (= 1e-4)와 같은 매우 작은 값을 이용하여 구한다. 이러한 미세한 차이를 이용하여 함수의 변화량을 구하는 방법을 <u>수치미분</u>이라고 한다.
 
@@ -56,8 +58,6 @@ print(dy)
 
 
 
-4.3 합성 함수의 미분
-
 지금까지는 단순한 함수를 다뤘다. 이제 합성함수를 미분해보자.
 
 $y=(e^x)^2$ 의 미분을 계산해보자. 코드는 다음과 같다.
@@ -85,7 +85,7 @@ print(dy)
 
 
 
-4.4 수치 미분의 문제점
+**수치 미분의 문제점**
 
 첫번째 문제로, 결과에 오차가 포함되어 있다. 대부분의 오차의 경우 매우 작아서 괜찮지만 어떤 계산이냐에 따라 커질 수도 있다. 하지만 이거보다 더 큰 문제는 계산량이다. 변수가 여러 개인 계산을 미분할 경우 변수 각각을 미분해야 하는데 신경망은 매개변수를 수백만 개 이상 사용하는 것이 기본이므로, 이 모두를 수치 미분으로 구현하는 것은 오랜 시간이 필요로 하게 된다. 이를 해결한 것이 역전파이다.
 
