--- a/06. DL/06. Test.md
+++ b/06. DL/06. Test.md
@@ -6,3 +6,47 @@
 
 소프트웨어 개발에서는 테스트는 반드시 거쳐야 한다. 딥러닝 프레임워크의 테스트 방법에 대해 얘기해보자.
 
+파이썬으로 테스트할 때에는 표준 라이브러리에 포함된 unittest를 사용하면 좋다.
+
+square 함수를 테스트 해보자. 코드는 다음과 같다.
+
+```python
+import unittest
+
+
+class SquareTest(unittest.TestCase):
+    def test_forward(self):
+        x = Variable(np.array(2.0))
+        y = square(x)
+        expected(np.array(4.0))
+        self.assertEqual(y.data, expected)
+```
+
+여기서 <u>규칙</u>이 있다. 테스트할 때에는 이름이 test로 시작하는 메서드를 만들고 그 안에 테스트할 내용을 적는다. 앞의 테스트는 square 함수의 출력이 기댓값과 같은지 확인한다.
+
+이 테스트 코드가 steps/test.py 경로에 있다고 했을 때 터미널에서 다음 명령어를 실행해보자.
+
+```python
+$ python -m unittest steps/test.py
+```
+
+OK가 출력되면 합격이고 FAIL이 뜨면 실패이다.
+
+
+
+역전파도 테스트해보자.
+
+```python
+class SquareTest(unittest.TestCase):
+    ...
+        
+    def test_backward(self):
+        x = Variable(np.array(3.0))
+        y = square(x)
+        y.backward()
+        expected = np.array(6.0)
+        self.assertEqual(x.grad, expected)
+```
+
+6.0은 직접 구해서 얻은 값이고, 이 역시 잘했다면 OK가 뜰 것이다.
+
