[추가] DeZero 패키지

--- a/04. Back-End/04. Template.md
+++ b/04. Back-End/04. Template.md
@@ -86,7 +86,7 @@ template에서는 두가지 표현만 기억하면 된다.
 
 만약 새로운 어플이 생긴다고 생각해보자. polls 하위에 있는 파이썬과 폴더가 <u>같은</u> 이름으로 만들어질 것이다. (admin, apps, models, tests, 등등) 또 기능이 만들어지고, 또 이름이 동일하게 만들어질것이다. 그러다 보면 url conf에서 `# from polls import views` views를 import하는데 views가 어디서온 무슨 views인지 알길이 없다.
 
-그래서 모든 urlconf가 모든 url을다표현하기가 버거워진다. 따라서 이 부분을 해결하기 위해 urlconf를 중첩구조로 만든다.
+그래서 urlconf가 모든 url을 다 표현하기가 버거워진다. 따라서 이 부분을 해결하기 위해 urlconf를 중첩구조로 만든다.
 
 root url_conf는 어떤 어플리케이션이구나만 파악하고 어플리케이션마다 url_conf를 또 다시 만들어서 해결할 수 있다. 이래야 충돌해결 그래서 root_url_conf 코드를 다음과 같이 수정하도록 하자.
 
