--- a/07. Clean Code/02. Functions.md
+++ b/07. Clean Code/02. Functions.md
@@ -256,7 +256,7 @@ if (deletePage(page) == E_OK){
 }
 ```
 
-이 코드와 아래 코드르 ㄹ보자.
+이 코드와 아래 코드를 보자.
 
 ```java
 try{
@@ -271,7 +271,7 @@ catch (Exception e){
 
 훨씬 깔끔한 것을 볼 수 있다.
 
-하지만 try/catch 블록은ㅇ ㅝㄴ래 추하다. 코드 구조에 혼란을 일으키며, 정상 동작과 오류 처리 동작을 뒤섞는다. 그러므로 try/catch 블록을 별도 함수로 뽑아내는 편이 좋다.
+하지만 try/catch 블록은 원래 추하다. 코드 구조에 혼란을 일으키며, 정상 동작과 오류 처리 동작을 뒤섞는다. 그러므로 try/catch 블록을 별도 함수로 뽑아내는 편이 좋다.
 
 ```java
 public void delete(Page page){
