--- a/08. Modern Java in Action/06. Parallel Stream.md
+++ b/08. Modern Java in Action/06. Parallel Stream.md
@@ -1,2 +1,437 @@
 # Parallel Stream
 
+
+
+#### 병렬 스트림
+
+이전에서 스트림 인터페이스를 사용하면 아주 간단하게 요소를 병렬로 처리할 수 있다고 했었다. 컬렉션에 parallelStream을 호출하면 명렬 스트림이 생성된다. 병렬스트림이란 각각의 스레드에서 처리할 수 있도록 스트림 요소를 여러 청크로 분할한 스트림이다. 간단한 예제로 살펴보자.
+
+숫자 n을 인수로 받아서 1부터 n까지의 모든 숫자의 합계를 반환하는 메서드를 구현한다고 가정하자. 조금 투박한 방식이지만, 무한 스트림을 만든 다음에 인수로 주어진 크기로 스트림을 제한하고, 두 숫자를 더하는 BinaryOperator로 리듀싱 작업을 수행할 수 있다.
+
+```java
+public long sequentialSum(long n){
+  return Stream.iterate(1L, i -> i + 1)
+    .limit(n)
+    .reduce(0L, Long::sum);
+}
+```
+
+또한 전통적인 자바에서는 다음과 같이 반복문으로 이를 구현할 수 있다.
+
+```java
+public long iterativeSum(long n){
+  long result = 0;
+  for (long i = 1L; i <= n; i++){
+    result += i;
+  }
+  return result;
+}
+```
+
+특히 n이 커진다면 이 연산을 병렬로 처리하는 것이 좋다. 더해지는 순서는 상관없기 때문이다.
+
+
+
+##### 순차 스트림을 병렬 스트림으로 변환하기
+
+```java
+public long parallelSum(long n){
+  return Stream.iterate(1L, i -> i + 1)
+    .limit(n)
+    .parallel()
+    .reduce(0L, Long::sum);
+}
+```
+
+코드 한줄로 병렬로 바꿀 수 있다. 마지막으로 리듀싱 연산으로 생성괸 부분 결과를 다시 리듀싱 연산으로 합쳐서 전체 스트림의 리듀싱 결과를 도출한다.
+
+
+
+##### 스트림 성능 측정
+
+병렬화를 이용하면 순차나 반복 형식에 비해 성능이 더 좋아질 것이라 <u>추측</u>했다. 하지만 소프트웨어 공학에서 추측은 위험한 방법이다. 특히 성능을 최적화할 때엔 3가지 황금 규칙이 있다. 첫째는 측정이며, 두번째도 측정, 세번째도 측정이다. 인텔 i7-4600U 2.1GHz 쿼드 코어에서 실행한 결과를 확인해보면,
+
+전통적인 for 루프가 순차적 스트림보다 빠르다. 이는 그럴 수 있다. 기본값을 박싱하거나 언박싱할 필요가 없기 때문이다. 병렬스트림을 사용한 결과를 측정해보면 병렬스트림이 전통적인 for루프는 커녕 순차적 스트림보다 5배나 느린 실망스러운 결과가 나온다. 의외의 결과엔 2가지 문제가 있다.
+
+- 반복 결과로 박싱된 객체가 만들어지므로 숫자를 더하려면 언박싱을 해야한다.
+- 반복 작업은 병렬로 수행할 수 있는 독립단위로 나누기가 어렵다.
+
+2번째 문제는 그냥 넘길 수 없다. 이전 연산의 결과에 따라 다음 함수의 입력이 달라지기 때문에 iterate 연산을 청크로 분할하기가 어렵다. 이와 같은 상황에서는 리듀싱 연산이 수행되지 않는다. 리듀싱 과정을 시작하는 시점에 전체 숫자 리스트가 준비되지 않았으므로 스트림을 병렬로 처리할 수 있도록 청크로 분할할 수 없다. 지시는 했지만 순차처리 방식과 크게 다른점이 없으므로 스레드를 할당하는 오버헤드만 증가하게 된다.
+
+이처럼 병렬 프로그래밍은 까다롭고 때로는 이해하기 어려운 함정이 숨어있다. 심지어 병렬프로그래밍을 오용하면(위와 같은 사례처럼) 오히려 전체 프로그래밍 성능이 더 나빠질 수도 있다. 따라서 마법 같은 parallel 메서드를 호출했을 때 내부적으로 어떤일이 일어나는지 꼭 이해해야 한다.
+
+
+
+##### 더 특화된 메서드 사용
+
+멀티코어 프로세서를 활용해서 효과적으로 합계 연산을 병렬로 수행하려면 어떻게 해아할까
+
+LongStream.rangeClosed라는 메서드를 소개했다. 이 메서드는 iterate에 비해 다음과 같은 장점을 제공한다.
+
+- LongStream.rangeClosed는 기본형 long을 직접 사용하므로 박싱과 언박싱 오버헤드가 사라진다.
+- LongStream.rangeClosed는 쉽게 청크로 분할할 수 있는 숫자 범위를 생산한다. 예를 들어 1-20 범위의 숫자를 각각 1-5, 6-10, 11-15, 16-20 범위의 숫자로 분할할 수 있다.
+
+```java
+public long rangedSum() {
+  return LongStream.rangeClosed(1, N)
+    .reduce(0L, Long::sum);
+}
+```
+
+이렇게 하면 다른 스트림보다 몇배는 빨라지며 전통적인 for루프보다 살짝 느려진다. 여기에 parallel까지 추가한다면 전통적인 방법보다 빨라진다. 올바른 <u>자료구조를 선택해야</u> 병렬 실행도 최적의 성능을 발휘할 수 있다.
+
+병렬화는 물론 공짜가 아니다. 이를 이용하려면 스트림을 재귀적으로 분할해야 하고, 각 스트림을 서로 다른 스레드의 리듀싱 연산으로 할당하고, 이들 결과를 하나의 값으로 합쳐야 한다. 멀티코어 간의 데이터 이동은 우리 생각보다 비싸다. 따라서 코어간의 데이터 전송 시간보다 훨씬 오래 걸리는 작업만 열렬로 수행하는 것이 바람직하다. 그리고 스트림을 병렬화해서 코드 실행 속도를 빠르게 하고 싶으면 항상 올바르게 사용하고 있는지 확인해야 한다.
+
+
+
+#### 잘못된 사용
+
+잘못 사용하는 가장 대표적인 예부터 보자.
+
+```java
+public long sideEffectSum(long n){
+  Accumulator accumulator = new Accumulator();
+  LongStream.rangeClosed(1, n).forEach(accumulator::add);
+  return accumulator.total;
+}
+
+public class Accumulator {
+  public long total = 0;
+  public void add(long value) { total += value; }
+}
+```
+
+뭐가 잘못되었는지 보일까? 위 코드는 본질적으로 순차 실행할 수 있도록 구현되어 있는 코드다. 그냥 실행하면 문제없지만 병렬로 실행하면 대참사가 난다. 왜냐하면 다수의 스레드에서 동시에 데이터에 접근하는 문제다. total이라는 변수에 접근하는데 이 total이 중간 중간 변해버리는 공유된 가변 변수이기 때문이다. 성능은 둘째 치고, 올바른 결과값 조차 나오지 않는다. 올바르게 동작하려면 공유된 가변 상태를 꼭 피해야 한다.
+
+
+
+### 병렬 스트림 효과적으로 사용하기
+
+몇개 이상의 요소가 있을 때만 병렬 스트림을 사용하라. 이런 말은 적절하지 않다. 그래도 가벼운 힌트 정도는 제공할 수 있다.
+
+- 확신이 서지 않으면 직접 측정하자. 순차 스트림을 병렬 스트림으로 숩게 바꿀 수 있지만 이는 능사가 아니다. 항상 더 빠르지 않기 때문이다. 잘 모르겠다면 적절한 벤치마크로 직접 성능을 측정하는 것이 바람직하다.
+- 박싱을 주의하라. 자동 박싱과 언박싱은 성능을 크게 저하시킬 수 있는 요소다. 자바 8은 박싱 동작을 피할 수 있도록 기본형 특화 스트림을 제공한다. 따라서 되도록이면 기본형 특화 스트림을 사용하는 것이 좋다.
+- 순차 스트림보다 병렬 스트림에서 떨어지는 연산이 있다. 특히 limit이나 findFirst처럼 요소의 순서에 의존하는 연산을 병렬 스트림에서 수행하려면 비싼 비용을 치뤄야 한다.
+- 전체 파이프라인 연산 비용을 고려하라. 처리해야할 요소 수가 N이고 하나의 요소를 처리하는데 드는 비용을 Q라 하면 전체 스트림 파이프 라인 처리 비용을 N*Q로 예상할 수 있다. Q가 높아진 다는 것은 병렬 스트림으로 성능을 개선할 수 있는 가능성이 있음을 의미한다.
+- 소량의 데이터에서는 병렬 스트림이 도움 되지 않는다. 병렬화 과정에서 생기는 부가 비용을 상쇄하지 못할 수도 있다.
+- 스트림을 구성하는 자료구조가 적절한지 확인하자. 예를 들어 ArrayList를 LinkedList보다 효율적으로 분할할 수 있다. LinkedList는 분할하려면 모든 요소를 탐색해야하지만 ArrayList는 요소를 탐색하지 않아도 되기 때문이다. 또한 range 팩토리 메서드로 만든 기본형 스트림도 쉽게 분해할 수 있다.
+- 스트림의 특성과 파이프라인의 중간 연산이 스트림의 특성을 어떻게 바꾸는지에 따라 분해과정의 성능이 달라질 수 있다. 예를 들어 SIZED 스트림은 정확히 같은 크기의 두 스트림으로 분할할 수 있으므로 스트림을 효과적으로 병렬처리 할 수 있다.
+- 최종 연산의 병합 과정(예를 들면 Collector의 combiner 메서드) 비용을 살펴보라. 병합 과정의 비용이 비싸다면 그 과정에서 상쇄될 수 있다.
+
+스트림 소스의 분해성
+
+- ArrayList: 훌륭함
+- IntStream.range: 훌륭함
+- HashSet: 좋음
+- TreeSet: 좋음
+- LinkedList: 나쁨
+- Stream.iterate: 나쁨
+
+
+
+### 포크/조인 프레임워크
+
+포크/조인 프레임워크는 병렬화할 수 있는 작업을 재귀적으로 작은 작업으로 분할한 다음, 서브태스크 각각의 결과를 합쳐서 전체 결과를 만들도록 설계되었다. 알고리즘을 공부한 사람이라면 분할정복이 떠오를 것이고, 그게 맞다.
+
+##### Recursive Task 활용
+
+스레드 풀을 이용하려면 `RecursiveTask<R>` 의 서브클래스를 만들어야 한다. 여기서 R은 병렬화된 태스크가 생성하는 결과 형식 또는 결과가 없을 때 (결과가 없더라도 다른 비지역 구조를 바꿀 수 있다)는 RecursiveAction 형식이다. RecursiveTask를 정의하려면 추상 메서드 compute를 구현해야 한다.
+
+```java
+protected abstract R compute();
+```
+
+compute 메서드는 태스크를 서브태스크로 분할하는 로직과 더 이상 분할할 수 없을 때 개별 서브태스크의 결과를 생산할 알고리즘을 정의한다. 따라서 대부분의 compute 메서드 구현은 다음과 같은 의사코드 형식을 유지한다.
+
+```java
+if ( 태스크가 충분히 작거나 더 이상 분할할 수 없으면 ) {
+  순차적으로 태스크 계산
+} else {
+  태스크를 두 서브태스크로 분할
+  태스크가 다시 서브태스크로 분할되도록 이 메서드를 재귀적으로 호출
+  모든 서브태스크의 연산이 완료될때까지 기다림
+  각 서브태스크의 결과를 합침
+}
+```
+
+언제까지 분할할 것인지 정해진 기준은 없다. 하지만 경험적으로 얻은 좋은 데이터는 있다. 그전에 먼저 포크/조인 프레임워크를 이용해서 범위의 숫자를 더하는 문제를 구현하면서 방법을 확인하자.
+
+```java
+public class ForkJoinSumCalculator extends java.util.concurrent.RecursiveTask<Long> {
+  private final long[] numbers;
+  private final int start;
+  private final int end;
+  public static final long THRESHOLD = 10_000; // 이 값 이하의 서브태스크는 분할 금지
+  
+  public ForkJoinSumCalculator(long[] numbers) {
+    this(numbers, 0, numbers.length);
+  }
+  private ForkJoinSumCalculator(long[] numbers, int start, int end) {
+    this.numbers = numbers;
+    this.start = start;
+    this.end = end;
+  }
+  @Override
+  protected Long compute() {
+    int length = end - start; // 이 태스크에서 더할 배열의 길이
+    if (length <= THRESHOLD) {
+      return computeSequentially();
+    }
+    ForkJoinSumCalculator leftTask = 
+      new ForkJoinSumCalculator(numbers, start, start + length/2);
+    leftTask.fork();
+    ForkJoinSumCalculator rightTask =
+      new ForkJoinSumcalculator(numbers, start + length/2, end);
+    Long rightResult = rightTask.compute(); // 2번째 서브태스크 동기 실행, 추가 분할가능
+    Long leftResult = left.join(); // 첫번째 서브태스크 결과를 읽거나 기다림
+    return leftResult + rightResult; // 결과를 조합
+  }
+  private long computeSequentially() {
+    long sum = 0;
+    for (int i = start; i < end; i++){
+      sum += numbers[i];
+    }
+    return sum;
+  }
+}
+```
+
+위 메서드는 n까지의 자연수 덧셈 작업을 병렬로 수행하는 방법을 더 직관적으로 보여준다. 다음 코드처럼 ForkJoinSumCalulator의 생성자로 원하는 수의 배열을 넘겨줄 수 있다.
+
+```java
+public static long forkJoinSum(long n) {
+  long[] numbers = LongStream.rangeClosed(1, n).toArray();
+  ForkJoinTask<Long> task = new ForkJoinSumCalculator(numbers);
+  return new ForkJoinPool().invoke(task);
+}
+```
+
+LongStream으로 n까지의 자연수를 포함하는 배열을 생성했다. 그리고 ForkJoinSumCalculator의 생성자로 전달해서 ForkJoinTask를 만들었다. 그리고 새로운 ForkJoinPool의 invoke메서드로 전달했다. 그리고 반환값은 위에서 정의한 태스크의 결과가 된다.
+
+
+
+##### 작업 훔치기
+
+예제에서는 수행할 숫자가 만개 이하면 서브태스크를 중단했다. 대부분의 기기에는 코어가 4개뿐이므로 서브태스크가 천개로 늘어난다 하더라도 성능이 좋아지지 않을 것이라 생각할 수 있다. 하지만 실제로는 적절한 크기로 많은 태스크를 포킹하는 것이 바람직하다. 그리고 복잡한 시나리오인 경우, 서브태스크의 작업수행 완료시간이 크게 달라질 수 있다. 이는 시간지연으로 이어진다. 그래서 이 프레임워크는 작업 훔치기(work stealing)라는 기법으로 문제를 해결한다. 그래서 모든 스레드를 거의 공정하게 분할한다. 이 역할을 수행하는, 자동으로 스트림을 분할하는 기법인 Spliterator를 알아보자.
+
+
+
+#### Spliterator
+
+자바 8은 Spliterator라는 새로운 인터페이스를 제공한다. 분할할 수 있는 반복자라는 의미다. Iterator처럼 소스의 요소 탐색 기능을 제공한다는 작업은 같지만 병렬 작업에 특화되어있다고 보면된다. 직접 구현해야 하는 것은 아니지만 어떻게 동작하는지 이해하는 것은 중요하다. 자바 8은 컬렉션 프레임워크에 포함된 모든 자료구조에 사용할 수 있는 디폴트 Spliterator 구현을 제공한다. 컬렉션은 spliterator라는 메서드를 제공하는 Spliterator 인터페이스를 구현한다.
+
+```java
+public interface Spliterator<T> {
+  boolean tryAdvance(Consumer<? super T> action);
+  Spliterator<T> trySplit();
+  long estimateSize();
+  int characteristics();
+}
+```
+
+여기서 T는 요소 형식을 가리키고, tryAdvance는 요소를 하나씩 순차적으로 소비하면서 탐색해야할 요소가 남아있으면 참을 반환한다. (일반적인 iterator) 반면 trySplit는 일부 요소를 분할해서 두번째 Spliterator를 생성하는 메서드다. estimateSize로 탐색해야할 요소 수 정보를 제공할 수 있다. 분할과정이 어떻게 진행되는지 이해해보자.
+
+
+
+##### 분할과정
+
+스트림에서 여러 스트림으로 분할하는 과정은 재귀적으로 일어난다. 첫번째 Spliterator에 trySplit을 호출하면 두 번째 Spliterator가 생성되고, 2개의 Spliterator가 trySplit을 다시 호출하면 4개가 생성되며, trySplit의 결과가 null이 될 때까지 이 과정을 반복한다. null이 반환된 것은 더 분할할 수 없다는 것을 의미한다.
+
+Spliterator는 characteristics라는 추상 메서드도 정의한다. Characteristics 메서드는 Spliterator 자체의 특성 집합을 포함하는 int를 반환한다. Spliterator를 이용하는 프로그램은 이들 특성을 참고해서 Spliterator를 더 잘 제어하고 최적화할 수 있다.
+
+Spliterator 특성
+
+- ORDERED: 리스트처럼 요소에 정해진 순서가 있다. 요소를 탐색하고 분할할 때 이 순서에 유의하자.
+- DISTICNT: x, y 두 요소를 방문했을 때 x.equals(y)는 항상 false를 반환한다.
+- SORTED: 탐색된 요소는 미리 정의된 정렬 순서를 따른다.
+- SIZED: 크기가 알려진 소스(Set 같은)로 Spliterator를 생성했으므로 estimatedSize()는 정확한 값을 반환한다.
+- NON-NULL: 탐색하는 모든 요소는 null이 아니다.
+- IMMUTABLE: 이 Spliterator의 소스는 불변이다. 요소를 탐색하는 동안 요소를 추가, 삭제, 고칠 수 없다.
+- SUBSIZED: 해당 Spliterator와 분할된 모든 Spliterator는 SIZED특성을 갖는다.
+
+
+
+#### 커스텀 Spliterator 구현하기
+
+문자열을 주면 그 안에 단어 수를 계산하는 단순한 메서드를 구현해보자. 다음은 반복 버전으로 구현한 예제이다.
+
+```java
+public int countWordsIteratively(String s) {
+  int counter = 0;
+  boolean lastSpace = true;
+  for (char c : s.toCharArray()) {
+    if (Character.isWhiteSpace(c)) {
+      lastSpace = true;
+    } else {
+      if (lastSpace) counter ++;
+      lastSpace = false;
+    }
+  }
+  return counter
+}
+```
+
+문자를 하나씩 탐색하면서 공백을 만나면 그때까지 탐색한 문자를 단어로 간주하여 counter를 증가시키는 단순한 메서드이다.
+
+반복형 대신 함수형을 이용하여 직접 스레드를 동기화하지 않고 병렬스트림으로 작업을 병렬화해보자.
+
+먼저 String을 스트림으로 변환해야 한다.
+
+```java
+Stream<Character> stream = IntStream.range(0, SENTENCE.length())
+  .mapToObj(SENTENCE::charAt);
+```
+
+스트림에 리듀싱 연산을 실행하면서 단어 수를 계산할 수 있다. 이때 지금까지 발견한 단어 수를 계산하는 int 변수와 마지막 문자가 공백이었는지 여부를 기억하는 Boolean 변수 등 두 가지 변수가 필요하다. 자바에는 튜플이 없으므로 변수 상태를 캡슐화하는 새로운 클래스 WordCounter를 만들어야 한다.
+
+```java
+class WordCounter {
+  private final int counter;
+  private final boolean lastSpace;
+  public WordCounter(int counter, boolean lastSpace) {
+    this.counter = counter;
+    this.lastSpace = lastSpace;
+  }
+  public WordCounter accumulate(Character c) {
+    if (Character.isWhitespace(c)){
+      return lastSpace ? this : new WordCounter(counter, true);
+    } else {
+      return lastSpace ? new WordCounter(counter +1, false) : this;
+    }
+  }
+  public WordCounter combine(WordCounter wordCounter) {
+    return new WordCounter(counter + wordCounter.counter, wordCounter.lastSpace);
+  }
+  public int getCounter() {
+    return counter;
+  }
+}
+```
+
+accumulate 메서드는 WordCounter의 상태를 어떻게 바꿀 것인지, 또는 엄밀히 WordCounter는 불변 클래스이므로 새로운 WordCounter 클래스는 어떤 상태로 생성할 것인지 정의한다. 이렇게하면 다음 코드처럼 짤 수 있다.
+
+```java
+package practice;
+
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
+
+public class Main {
+	final static String SENTENCE = "Hello new java 8 world!";
+
+	public static void main(String[] args) {
+
+		Stream<Character> stream = IntStream.range(0, SENTENCE.length())
+			.mapToObj(SENTENCE::charAt);
+		System.out.println("Found " + countWords(stream) + "words");
+	}
+
+	static class WordCounter {
+		private final int counter;
+		private final boolean lastSpace;
+
+		public WordCounter(int counter, boolean lastSpace) {
+			this.counter = counter;
+			this.lastSpace = lastSpace;
+		}
+
+		public WordCounter accumulate(Character c) {
+			if (Character.isWhitespace(c)) {
+				return lastSpace ? this : new WordCounter(counter, true);
+			} else {
+				return lastSpace ? new WordCounter(counter + 1, false) : this;
+			}
+		}
+
+		public WordCounter combine(WordCounter wordCounter) {
+			return new WordCounter(counter + wordCounter.counter, wordCounter.lastSpace);
+		}
+
+		public int getCounter() {
+			return counter;
+		}
+	}
+
+	private static int countWords(Stream<Character> stream) {
+		WordCounter wordCounter = stream.reduce(new WordCounter(0, true),
+			WordCounter::accumulate,
+			WordCounter::combine);
+		return wordCounter.getCounter();
+	}
+}
+```
+
+수행시키면 Found 5words가 나온다. 이제 병렬 스트림으로 처리해보자. `System.out.println("Found " + countWords(stream.parallel()) + "words");` 으로 하나만 추가해주면 된다.
+
+안타깝게도 원하는 결과가 나오지 않는다.
+
+`Found 19words`
+
+어디서 잘못되었을까? 조금만 생각하면 쉽게 문제를 찾을 수 있다. 원래 문자열을 임의의 위치에서 쪼개다보니 예상치 못하게 하나의 단어를 둘로 쪼갤수도 있다. 즉, 순차 스트림을 병렬 스트림으로 바꿀 때 스트림 분할 위치에 따라 잘못된 결과가 나올 수 있다.
+
+이 문제를 어떻게 해결할 수 있을까?
+
+문자열을 임의의 위치에서 분할하지 말고 단어가 끝나는 위치에서만 분할하는 방법으로 이 문제를 해결할 수 있다. 그러려면 단어 끝에서 문자열을 분할하는 문자 Spliterator가 필요하다.
+
+다음은 문자 Spliterator를 구현한 다음 병렬 스트림으로 전달하는 코드다.
+
+```java
+static class WordCounterSpliterator implements Spliterator<Character> {
+		private final String string;
+		private int currentChar = 0;
+
+		public WordCounterSpliterator(String string) {
+			this.string = string;
+		}
+
+		@Override
+		public boolean tryAdvance(Consumer<? super Character> action) {
+			action.accept(string.charAt(currentChar++)); // 현재 문자를 소비한다.
+			return currentChar < string.length(); // 소비할 문자가 남아있으면 true
+		}
+
+		@Override
+		public Spliterator<Character> trySplit() {
+			int currentSize = string.length() - currentChar;
+			if (currentSize < 10) {
+				return null; // 이젠 순차 처리해야할 만큼 충분히 작아짐
+			}
+			for (int splitPos = currentSize / 2 + currentChar; splitPos < string.length(); splitPos++) {
+				// 파싱할 문자열의 중간을 분할 위치로 설정
+				if (Character.isWhitespace(string.charAt(splitPos))) {
+					// 다음 공백이 나올 때까지 분할 위치를 뒤로 이동
+					Spliterator<Character> spliterator =
+						new WordCounterSpliterator(string.substring(currentChar,
+							splitPos));
+					// 분할위치까지 문자열을 파싱할 새로운 Spliterator 생성
+					currentChar = splitPos;
+					// 시작위치를 분할 위치로 설정
+					return spliterator;
+					// 공백을 찾았고 문자열을 분리했으므로 루프를 종료
+				}
+			}
+			return null;
+		}
+
+		@Override
+		public long estimateSize() {
+			return string.length() - currentChar;
+		}
+
+		@Override
+		public int characteristics() {
+			return ORDERED + SIZED + SUBSIZED + NONNULL + IMMUTABLE;
+		}
+```
+
+이제 spliterator를 적용시켜보자.
+
+```java
+	public static void main(String[] args) {
+		Spliterator<Character> spliterator = new WordCounterSpliterator(SENTENCE);
+		Stream<Character> stream = StreamSupport.stream(spliterator, true);
+		System.out.println("Found " + countWords(stream) + "words");
+	}
+```
+
+그러면 다시 결과는 5word로 올바른 결과값을 출력할 수 있다.
