[수정] 자바 스프링은 유튜브를 통해 학습하기로 한다.

--- a/09. Java Spring/00. Introduction.md
+++ b/09. Java Spring/00. Introduction.md
@@ -1,13 +1,12 @@
 # Instruction
 
-자바 스프링에 대해 공부한 내용을 적는다.
+박재성님의 [자바강의](https://www.youtube.com/watch?v=JUKehW-c484&list=PLqaSEyuwXkSppQAjwjXZgKkjWbFoUdNXC)를 보고 학습한 내용을 기록합니다.
 
 
 
-- DI(Dependency Injection): 부품 조립
-  - Setter Injection `a.setB(b);`
-  - Construction Injection `A a = new A(b);`
+학습방법:
 
-
-
-- IoC(Inversion of Control) 컨테이너: 작은 부품이 있고 큰 부품이 있다. 작은 부품부터 큰 부품으로 만들어지며 결합이 된다. 근데 이게 생각해보면 Dependency가 있다면 큰 부품순이지만 이건 결합하기 전을 기준으로 하므로 작은 부품부터 만들어지고 연결된다. 역순임.
+1. 강의를 들으면서 추가로 학습한 내용을 기술
+2. 스스로 학습한 내용을 토대로 과정완료
+3. 만족하는 수준까지 코드를 리팩터링
+4. 메모를 보지 않고 전체 과정 성공
