[추가] 객체에 관한 내용 마무리

--- a/11. The Essence of Object-Orientation/02. Object.md
+++ b/11. The Essence of Object-Orientation/02. Object.md
@@ -151,3 +151,15 @@
 ### "행동이 상태를 결정한다."
 
 이다.
+
+
+
+#### 은유와 객체
+
+초반에 객체지향의 세계는 현실세계의 모방이란 말이 틀렸다는 말을 했고, 이어하려 한다. 객체지향을 흔히 현실 세계의 **추상화(abstract)**라고도 한다. 그런데 여기서 오해가 자꾸 생긴다. 이 관점에서 객체지향은 현실세계를 면밀히 관찰하고 그 특성을 간추리고 요약해서 소프트웨어 객체로 추상화할 수 있는 능력이 중요하다는 생각이 자리잡고 있다.
+
+그러나 객체지향의 세계는 현실 세계의 단순한 모방이 아니다. 전혀 다른 양상을 띤다. 소프트웨어 상품은 실제 세계의 상품이 하지 못하는 가격 계산과 같은 행동을 스스로 수행할 수 있다. 이건 실제 세계 상품을 단순화하거나 추상화한 것이 아니라 특성이 전혀 다른 어떤 것임을 의미한다.
+
+그렇다면 현실 속의 객체와 소프트웨어 객체 사이의 가장 큰 차이는 무엇일까? 바로 현실속에선 수동적인 존재가 객체로 구현되면 능동적으로 변한다는 것이다. 현실속의 트럼프 카드는 스스로 뒤집을 수도 말을 할 수도 걸을 수도 없다. 하지만 객체지향 세계를 구축할 때 현실에서 가져온 객체들은 어떤 일이라도 할 수 있다. 현실의 객체보다 더 많은 일을 할 수 있는 소프트웨어 객체의 특징을 **의인화(anthropomorphism)**라고 부른다.
+
+이렇듯 전혀 다른 양상때문에 현실과 소프트웨어 객체사이의 관계를 더 정확하게 설명할 수 있는 단어는 은유다. "그 여자 양같아요" 라고 하는 것을 통해 성격을 묘사하는 것처럼 은유를 통해 소프트웨어 객체를 더 쉽게 이해할 수 있다. 그리고 은유를 효과적으로 사용할 경우 표현적 차이를 줄일 수 있으며, 이해하기 쉽고 유지보수가 용이한 소프트웨어를 만들 수 있다. 그래서 현실 세계인 도메인에서 사용되는 이름을 객체에게 부여하라고 가이드하는 것이다.
