[추가] 빈입력 검사 추가

--- a/08. Modern Java in Action/05. Data Collect With Stream.md
+++ b/08. Modern Java in Action/05. Data Collect With Stream.md
@@ -14,7 +14,7 @@ collect와 컬렉터로 구현할 수 있는 질의 예제다.
   - `Map<Boolean, List<Transaction>>` 반환
 - 트랜잭션을 도시 등 다수준으로 그룹화하시오. 그리고 각 트랜잭션이 비싼지 저렴한지 구분하시오.
   - ``Map<String, Map<Boolean, List<Transaction>>>``
--  반환
+- 반환
 
 
 
@@ -202,7 +202,7 @@ Map<CaloricLevel, List<Dish>> dishesByCaloricLevel = menu.stream().collect(
 
 ##### 그룹화된 요소 조작
 
-요소를 그룹화 한 다음에는 각 결과 그룹의 요소르르 조작하는 연산이 필요하다. 예를 들어 500칼로리가 넘는 요리만 필터링 한다고 가정하자. 그룹화를 하기 전에는 프레디케이터로 필터를 적용해 문제를 해결할 수 있었다.
+요소를 그룹화 한 다음에는 각 결과 그룹의 요소를 조작하는 연산이 필요하다. 예를 들어 500칼로리가 넘는 요리만 필터링 한다고 가정하자. 그룹화를 하기 전에는 프레디케이터로 필터를 적용해 문제를 해결할 수 있었다.
 
 ```java
 Map<Dish.Type, List<Dish>> caloricDishesByType =
