--- a/09. Java Spring/00. Introduction.md
+++ b/09. Java Spring/00. Introduction.md
@@ -1,12 +1,3 @@
 # Instruction
 
-박재성님의 [자바강의](https://www.youtube.com/watch?v=JUKehW-c484&list=PLqaSEyuwXkSppQAjwjXZgKkjWbFoUdNXC)를 보고 학습한 내용을 기록합니다.
-
-
-
-학습방법:
-
-1. 강의를 들으면서 추가로 학습한 내용을 기술
-2. 스스로 학습한 내용을 토대로 과정완료
-3. 만족하는 수준까지 코드를 리팩터링
-4. 메모를 보지 않고 전체 과정 성공
+스프링 5 레시피를 읽고 공부한 내용을 기록합니다.
