[추가] tdd의 기초에 대하여

--- a/14. TDD/01. Basic.md
+++ b/14. TDD/01. Basic.md
@@ -63,3 +63,19 @@ public class Calculator {
 참고로 테스트 코드도 코드이기 때문에 유지보수 대상이다. 테스트 메서드에서 발생하는 중복을 알맞게 제거하거나 의미가 잘 드러나게 코드를 수정할 필요가 있다. 그리고 수정을 하면서 테스트가 계속 잘 돌아가는지 확인을 하여 깨지는 테스트가 없는지 중간중간 확인해야 한다.
 
 주의할점: 기존 코드와 달리 테스트 코드의 중복은 무턱대고 제거하면 안 된다. 중복을 제거한 뒤에도 테스트 코드의 가독성이 떨어지지 않고 수정이 용이한 경우에만 중복을 제거해야 한다. 만약 중복을 제거한 뒤 테스트 코드 관리가 어려워진다면 되돌려 놓아야 한다.
+
+
+
+### TDD의 흐름
+
+TDD의 코드를 짜는 과정은 다음과 같다. 추가하면서 깃으로 계속 log를 (초반엔 미처 생각못하여 한번에 커밋하였다.) 남겼으므로 확인이 가능하다.
+
+테스트 -> 코딩 -> 리팩터링 -> 테스트 -> 코드 ...
+
+TDD는 기능을 검증하는 테스트를 먼저 작성한다. 작성한 테스트를 통과하지 못하면 통과할 만큼만 코드를 작성한다. 통과한 뒤 개선할 코드가 있으면 리팩터링을 진행한다. 리팩터링하고 기존 기능이 망가지지 않았는지 확인한다. 이 과정을 반복하며 점진적으로 기능을 완성해 나가는 것, 이것이 전형적인 TDD의 흐름이다.
+
+
+
+테스트 코드를 먼저 작성하면 테스트가 개발을 주도하게 된다. 테스트를 추가한 뒤 테스트를 통과시킬 만큼 기능을 구현했다. 계속 통과시킬 만큼만 구현하고 추가하지 않은 테스트를 고려해서 구현하지 않았다. 테스트 코드를 만들면 다음 개발 범위가 정해진다. 테스트 코드가 추가되면서 검증하는 범위가 넓어질수록 구현도 점점 완성되어 간다. 이렇게 테스트가 개발을 주도해 나간다.
+
+당장 리팩터링을 하지 않더라도 테스트 코드가 있으면 보다 과감하게 진행이 가능하다. 잘동작하는 코드를 수정하는 것은 심리적으로 불안감을 주기 떄문에 코드 수정을 꺼리게 된다. 하지만 검증해주는 테스트가 있으면 코드 수정에 대한 불안감을 줄여준다. 따라서 품질이 급격히 나빠지지 않게 막아주는 효과가 있으며 향후 유지보수 비용을 낮추는데 기여한다.
