--- a/12. Effective JAVA/00. Summary.md
+++ b/12. Effective JAVA/00. Summary.md
@@ -4,7 +4,7 @@
 
 1. 생성자 대신 정적 팩터리 메서드를 고려하라
 2. 생성자에 매개변수가 많다면 빌더를 고려하라
-3. private 생성자나 열거 타입으로 싱글턴임을 보즈앟라
+3. private 생성자나 열거 타입으로 싱글턴임을 보증하라
 4. 인스턴스화를 막으려거든 private 생성자를 사용하라
 5. 자원을 직접 명시하지 말고 의존 객체 주입을 사용하라
 6. 불필요한 객체 생성을 피하라
@@ -63,7 +63,7 @@
 59. 라이브러리를 익히고 사용하라
 60. 정확한 답이 필요하다면 float과 double은 피하라
 61. 박싱된 기본 타입보다는 기본 타입을 사용하라
-62. 다른 타입이 적절하담녀 문자열 사용을 피하라
+62. 다른 타입이 적절하다면 문자열 사용을 피하라
 63. 문자열 연결은 느리니 주의하라
 64. 객체는 인터페이스를 사용해 참조하라
 65. 리플렉션보다는 인터페이스를 사용하라
