[수정] 스프링 강의를 듣고 배운것을 기록합니다.

--- a/09. Java Spring/00. Introduction.md
+++ b/09. Java Spring/00. Introduction.md
@@ -1,3 +1,17 @@
 # Instruction
 
-스프링 5 레시피를 읽고 공부한 내용을 기록합니다.
+인프런 김영한님 강의를 듣고 공부한 내용을 기록합니다.
+
+
+
+#### 환경
+
+- Java 11
+- IDE: IntelliJ
+- Gradle Project
+- Spring Boot: 2.6.x
+
+
+
+
+
