[추가] 스프링의 도움 없이 프로젝트 설계

--- a/09. Java Spring/02. Good OOP.md
+++ b/09. Java Spring/02. Good OOP.md
@@ -66,5 +66,8 @@
   - 인터페이스 변수 = 구현클래스로 쓸 수 있다는 것은 이미 안다는 것이므로 DIP 위반이다.
 
 
-
 결과적으로 다형성만으로는 OCP, DIP를 지킬 수 없다. 뭔가 더 필요하다. 이를 스프링으로 해결하고자 하는 것이다.
+
+이상적으로는 모든 설계에 인터페이스를 부여하는 것이 좋을 수 있다. 하지만 여기엔 실제적으로 고민이 있다.
+
+인터페이스를 도업히면 추상화라는 비용이 발생하다. 그래서 기능을 확장할 가능성이 없다면, 구체 클래스를 직접 사용하고, 향후 꼭 필요할 때 리팩터링해서 인터페이스를 도입하는 것도 방법이다.
