[추가] 문제점에 대한 내용 추가

--- a/09. Java Spring/03. Without Spring.md
+++ b/09. Java Spring/03. Without Spring.md
@@ -30,3 +30,40 @@
 요구사항을 보면, 결정하기 어려운 부분들이 있다. 그렇다고 이런 정책이 결정될 떄까지 개발을 무기한 기다릴 수 도 없다. 객체지향 설계 방법을 통해 갈아끼울 수 있도록 설계하면 된다.
 
 이제부터는 프로젝트를 진행하면서 기록한다.
+
+코드를 어느정도 완성한 시점에서 살펴보자.
+
+```java
+public class OrderServiceImpl implements OrderService{
+
+	private final MemberRepository memberRepository = new MemoryMemberRepository();
+  // private final DiscountPolicy discountPolicy = new FixDiscountPolicy();
+ 	private final DiscountPolicy discountPolicy = new RateDiscountPolicy();
+
+	@Override
+	public Order createOrder(Long memberId, String itemName, int itemPrice) {
+		Member member = memberRepository.findById(memberId);
+		int discountPrice = discountPolicy.discount(member, itemPrice);
+		return new Order(memberId, itemName, itemPrice, discountPrice);
+	}
+}
+```
+
+할인정책을 Fix에서 Rate로 변경하려 한다. 다형성을 상당히 잘 이용해서 이외의 코드는 변경할 사항이 없다. 나름 설계를 굉장히 잘한 부분이다. 하지만, 여전히 DIP와 OCP가 위반이다. 클라이언트가 Fix와 Rate를 알고 있어야 한다는 소리이므로, 이는 명백한 DIP위반이다. 인터페이스에만 의존하지 않고 있다. 오히려 둘다 의존하고 있다. 그리고 OCP역시 문제다. 코드를 변경하지 않고 확장해야 하는데 고작 한줄 변경이지만 확실히 변경하고 있다. 이도 위반이다. 이를 해결하고자 다음과 같이 짜보자.
+
+```java
+public class OrderServiceImpl implements OrderService{
+
+	private final MemberRepository memberRepository = new MemoryMemberRepository();
+ 	private final DiscountPolicy discountPolicy;
+
+	@Override
+	public Order createOrder(Long memberId, String itemName, int itemPrice) {
+		Member member = memberRepository.findById(memberId);
+		int discountPrice = discountPolicy.discount(member, itemPrice);
+		return new Order(memberId, itemName, itemPrice, discountPrice);
+	}
+}
+```
+
+이제 DIP도 OCP도 지킬 수 있다. 하지만 이대로 돌리면 당연히 NullPointerException을 마주칠 수 있다. 그래서 이를 어떻게 해결해야 한다.
