--- a/09. Java Spring/04. Seperation of Concerns.md
+++ b/09. Java Spring/04. Seperation of Concerns.md
@@ -85,3 +85,17 @@ public class AppConfig {
 ```
 
 이제 중복은 없어지고, 다른 구현체로 변경할 때에도 한 부분만 변경하면 된다. 그리고 역할과 구현 클래스가 한눈에 들어오고, 애플리케이션 전체 구성이 어떻게 되어있는지 빠르게 파악도 가능하다.
+
+
+
+이제 정말로 사용 영역과 구성 영역이 변경되었다. 이젠, 무언가 변경이 되어도 <u>구성 영역의 코드만</u> 수정하면 된다. 만약 실험하고 싶으면,
+
+```java
+	public DiscountPolicy discountPolicy() {
+		return new RateDiscountPolicy();
+	}
+```
+
+와 같이 수정하고 돌려보자. 너무 잘 된다. DIP, OCP의 문제를 깔끔하게 해결한 것을 볼 수 있다.
+
+참고로 구성 영역은 당연히 변경되는 것이 맞다. 구성 역할을 담당하는 이 기획자는 참여자와 구현 객체를 모두 알아야 한다.
