[수정] 순수한 자바코드에서 스프링으로 변경

--- a/09. Java Spring/04. Seperation of Concerns.md
+++ b/09. Java Spring/04. Seperation of Concerns.md
@@ -70,7 +70,7 @@ public class AppConfig {
 		return new MemberServiceImpl(memberRepository());
 	}
 
-	private MemoryMemberRepository memberRepository() {
+	public MemoryMemberRepository memberRepository() {
 		return new MemoryMemberRepository();
 	}
 
