[추가] 실무팁 추가

--- a/16. JPA/04. ORM Basic.md
+++ b/16. JPA/04. ORM Basic.md
@@ -167,3 +167,19 @@ public void changeTeam(Team team){
 
 
 사실 제일 중요한건 단방향 매핑이다. <u>처음에 설계할 때 단방향 매핑으로 모두 끝내야한다.</u> 양방향 매핑은 반대 방향으로 조회 기능이 추가된 것 뿐이다. 나중에 역방향으로 탐색할 일이 많긴한데, 단방향 매핑만 잘하고 양방향은 필요할 때 추가해도 된다. 테이블에 영향을 주지 않기 때문이다.
+
+
+
+#### 실무 팁
+
+다대일, 일대다, 일대일, 다대다 의 연관관계가 있다.
+
+어떤 것을 사용하면 좋을까?
+
+가장 많이 사용하는 경우는 다대일이다. 그리고 단방향으로 사용을 한다. 아무래도 양방향으로 사용하면 신경써야할 일이 많기 때문에 우선은 기피하는 것이 좋다. 꼭 필요하면 추가한다.
+
+일대다역시 피하는 것이 좋다. 일대다를 피하기 위해서는 다대일 양방향을 걸어주는 것이 좋다. 일대다의 경우 코드상에서는 수정하지 않은 클래스가 디비에는 업데이트 쿼리가 나간다. 이게 복잡해지는 경우 이해하기 힘들어지고, 유지보수 측면에서 어려워진다. 반대쪽 방향으로 업데이트할 일이 없더라도 디비에 조금더 맞춰주는게 편해진다.
+
+일대일 관계는 그 반대도 일대일이다. 주 테이블 대상테이블 둘다 외래키 선택이 가능하며, 외래키에는 데이터베이스 유니크 제약조건을 추가하는 것이 좋다. 그 외 사용법은 다대일과 같다.
+
+다대다는 사용을 금지하자. 사이에 연결테이블자체를 엔티티로 승격하여 일대다, 다대일로 풀어내자. 그리고 실제로 비지니스는 복잡하기에 이 경우가 나오는 상황도 많지 않다.
